--- a/3_18_Water_Container/3_18_Water_Container/3_18_Water_Container.csproj
+++ b/3_18_Water_Container/3_18_Water_Container/3_18_Water_Container.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="OptimalWaterContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WaterContainer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
