--- a/8_54_Reversed_Linked_List/LinkedList/LinkedList.csproj
+++ b/8_54_Reversed_Linked_List/LinkedList/LinkedList.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomLinkedList.cs" />
+    <Compile Include="EnumerableReverser.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
