--- a/10_60_Merge_Double_Linked_List/Logic/Logic.csproj
+++ b/10_60_Merge_Double_Linked_List/Logic/Logic.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="DoublyLinkedList.cs" />
     <Compile Include="DoublyNode.cs" />
+    <Compile Include="MergerDoublyNodes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
